tdf#80646 insert LTR mark after label

Change-Id: Idb60b43bd04ab9e7c75c144ebf2b1626e13d34b6
Reviewed-on: https://gerrit.libreoffice.org/62418
Tested-by: Jenkins
Reviewed-by: Andras Timar <andras.timar@collabora.com>